WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
170118
addIceCandidate should not throw if passed null or undefined
https://bugs.webkit.org/show_bug.cgi?id=170118
Summary
addIceCandidate should not throw if passed null or undefined
youenn fablet
Reported
2017-03-27 08:12:43 PDT
This should just indicate end of ICE candidate addition.
Attachments
Patch
(12.61 KB, patch)
2017-03-27 09:17 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews105 for mac-elcapitan-wk2
(937.60 KB, application/zip)
2017-03-27 10:26 PDT
,
Build Bot
no flags
Details
Patch
(15.13 KB, patch)
2017-03-27 11:01 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2017-03-27 09:17:47 PDT
Created
attachment 305475
[details]
Patch
Build Bot
Comment 2
2017-03-27 10:26:42 PDT
Comment on
attachment 305475
[details]
Patch
Attachment 305475
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.webkit.org/results/3418452
New failing tests: imported/w3c/web-platform-tests/webrtc/rtcpeerconnection/rtcpeerconnection-idl.html webrtc/video-remote-mute.html webrtc/audio-replace-track.html webrtc/release-after-getting-track.html webrtc/video-replace-track-to-null.html webrtc/audio-peer-connection-webaudio.html webrtc/peer-connection-audio-mute.html webrtc/video-mediastreamtrack-stats.html webrtc/video-with-receiver.html webrtc/video-mute.html webrtc/connection-state.html
Build Bot
Comment 3
2017-03-27 10:26:45 PDT
Created
attachment 305479
[details]
Archive of layout-test-results from ews105 for mac-elcapitan-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews105 Port: mac-elcapitan-wk2 Platform: Mac OS X 10.11.6
youenn fablet
Comment 4
2017-03-27 11:01:06 PDT
Created
attachment 305485
[details]
Patch
Eric Carlson
Comment 5
2017-03-27 16:08:14 PDT
Comment on
attachment 305485
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=305485&action=review
> LayoutTests/imported/w3c/web-platform-tests/webrtc/rtcpeerconnection/rtcpeerconnection-idl-expected.txt:82 > +FAIL RTCPeerConnection interface: calling addIceCandidate([object Object],[object Object]) on pc with too few arguments must throw TypeError assert_unreached: Should have rejected: undefined Reached unreachable code
is this expected?
youenn fablet
Comment 6
2017-03-27 16:22:23 PDT
(In reply to Eric Carlson from
comment #5
)
> Comment on
attachment 305485
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=305485&action=review
> > > LayoutTests/imported/w3c/web-platform-tests/webrtc/rtcpeerconnection/rtcpeerconnection-idl-expected.txt:82 > > +FAIL RTCPeerConnection interface: calling addIceCandidate([object Object],[object Object]) on pc with too few arguments must throw TypeError assert_unreached: Should have rejected: undefined Reached unreachable code > > is this expected?
I think webidl parser should be updated and/or the test so that it understands that undefined turns into an empty RTCIceCandidateInit object.
WebKit Commit Bot
Comment 7
2017-03-27 16:36:40 PDT
Comment on
attachment 305485
[details]
Patch Clearing flags on attachment: 305485 Committed
r214441
: <
http://trac.webkit.org/changeset/214441
>
WebKit Commit Bot
Comment 8
2017-03-27 16:36:43 PDT
All reviewed patches have been landed. Closing bug.
Chris Dumez
Comment 9
2017-03-27 16:48:36 PDT
Comment on
attachment 305485
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=305485&action=review
>>> LayoutTests/imported/w3c/web-platform-tests/webrtc/rtcpeerconnection/rtcpeerconnection-idl-expected.txt:82 >>> +FAIL RTCPeerConnection interface: calling addIceCandidate([object Object],[object Object]) on pc with too few arguments must throw TypeError assert_unreached: Should have rejected: undefined Reached unreachable code >> >> is this expected? > > I think webidl parser should be updated and/or the test so that it understands that undefined turns into an empty RTCIceCandidateInit object.
This one looks real to me. You are no longer throwing a TypeError when calling addIceCandidate() without a parameter. As per Web IDL, I think we should. addIceCandidate(undefined) is not the same as addIceCandidate().
youenn fablet
Comment 10
2017-03-27 16:58:31 PDT
Filed
bug 170146
to fix both not-throwing and function-length failures
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug