Source/WebCore/Modules/mediastream/PeerConnectionBackend.cpp
@@ -225,16 +225,22 @@ void PeerConnectionBackend::setRemoteDescriptionFailed(Exception&& exception)
     m_setDescriptionPromise = std::nullopt;
 }
 
-void PeerConnectionBackend::addIceCandidate(RTCIceCandidate& iceCandidate, DOMPromise<void>&& promise)
+void PeerConnectionBackend::addIceCandidate(RTCIceCandidate* iceCandidate, DOMPromise<void>&& promise)
 {
     ASSERT(m_peerConnection.signalingState() != RTCSignalingState::Closed);
 
-    if (iceCandidate.sdpMid().isNull() && !iceCandidate.sdpMLineIndex()) {
+    if (!iceCandidate) {
+        endOfIceCandidates(WTFMove(promise));
+        return;
+    }
+
+    // FIXME: As per https://w3c.github.io/webrtc-pc/#dom-rtcpeerconnection-addicecandidate(), this check should be done before enqueuing the task.
+    if (iceCandidate->sdpMid().isNull() && !iceCandidate->sdpMLineIndex()) {
         promise.reject(Exception { TypeError, ASCIILiteral("Trying to add a candidate that is missing both sdpMid and sdpMLineIndex") });
         return;
     }
     m_addIceCandidatePromise = WTFMove(promise);
-    doAddIceCandidate(iceCandidate);
+    doAddIceCandidate(*iceCandidate);
 }
 
 void PeerConnectionBackend::addIceCandidateSucceeded()
