Source/WebCore/Modules/mediastream/RTCPeerConnection.cpp
@@ -278,7 +278,7 @@ RefPtr<RTCSessionDescription> RTCPeerConnection::pendingRemoteDescription() cons
     return m_backend->pendingRemoteDescription();
 }
 
-void RTCPeerConnection::queuedAddIceCandidate(RTCIceCandidate& rtcCandidate, DOMPromise<void>&& promise)
+void RTCPeerConnection::queuedAddIceCandidate(RTCIceCandidate* rtcCandidate, DOMPromise<void>&& promise)
 {
     if (m_signalingState == RTCSignalingState::Closed) {
         promise.reject(INVALID_STATE_ERR);
